<resources>
    <string name="app_name">Cosplay Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cosplay_cover_image">Cosplay cover image</string>
    <string name="character">Character</string>
    <string name="series">Series</string>
    <string name="budget">Budget</string>
    <string name="due_date">Due date</string>
    <string name="start_date">Start date</string>
    <string name="start_date_icon">Start date icon</string>
    <string name="mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="due_date_icon">Due date icon</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="character_main_image">Character main image</string>
</resources>