<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp">

            <com.google.android.material.card.MaterialCardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/characterPicCard">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    app:srcCompat="@drawable/ic_round_add_photo_alternate_24"
                    android:id="@+id/characterPicImageView"
                    app:tint="?colorPrimaryVariant"
                    android:contentDescription="@string/character_main_image" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/characterPicCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/leftLinear">

                <include layout="@layout/layout_date_selector_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="5dp"
                    android:id="@+id/startDateLayout"
                    app:hint='@{@string/start_date}'
                    app:dateString='@{@string/mm_dd_yyyy}'
                    app:icon="@{@drawable/ic_round_today_24}" />

                <include layout="@layout/layout_date_selector_button"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/budgetLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/dueDateLayout"
                    app:hint='@{@string/due_date}'
                    app:dateString='@{@string/mm_dd_yyyy}'
                    app:icon="@{@drawable/ic_round_event_busy_24}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/leftLinear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/rightLinear">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/characterLayout"
                    app:startIconDrawable="@drawable/ic_round_face_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/characterEdittext"
                        android:hint="@string/character"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seriesLayout"
                    app:startIconDrawable="@drawable/ic_round_tv_24"
                    app:layout_constraintTop_toBottomOf="@+id/characterLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/seriesEdittext"
                        android:hint="@string/series"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/budgetLayout"
                    app:startIconDrawable="@drawable/ic_round_attach_money_24"
                    app:layout_constraintTop_toBottomOf="@+id/seriesLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/budgetEdittext"
                        android:hint="@string/budget"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rightLinear"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/save_button"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:text="@string/cancel"
                android:id="@+id/cancel_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.cosplayplanner.views.DatePickerClass
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible"
        tools:clickable="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
